--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    api "android.arch.lifecycle:extensions:1.1.1"
+
     implementation 'androidx.cardview:cardview:1.0.0'
     //控件绑定框架
     implementation 'com.jakewharton:butterknife:10.2.3'
