--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,13 +8,20 @@ android {
         applicationId "com.demo.btvideo"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         ndk {
             //选择要添加的对应cpu类型的.so库（不需要的删除即可）。
             abiFilters "armeabi" , "armeabi-v7a",'armeabi-v8a', 'x86', 'x86_64', 'mips', 'mips64'
         }
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+            }
+        }
+
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -30,6 +37,9 @@ android {
 //            abiFilters "armeabi" , "armeabi-v7a",'armeabi-v8a', 'x86', 'x86_64'
 //        }
     }
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
@@ -39,24 +49,53 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    api "android.arch.lifecycle:extensions:1.1.1"
+    def room_version = "2.2.5"
+
+    //数据库
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+
+//    implementation "android.arch.lifecycle:extensions:1.1.1"
 
     implementation 'androidx.cardview:cardview:1.0.0'
     //控件绑定框架
     implementation 'com.jakewharton:butterknife:10.2.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+    //第三方卡片库
+    implementation 'com.github.limuyang2:LShadowLayout:1.0.6'
+
+    implementation 'com.squareup.okio:okio:2.7.0'
+
 
     //图片加载框架
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 
     //网络请求
     implementation("com.squareup.okhttp3:okhttp:4.8.0")
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+
     //json工具
     implementation 'com.google.code.gson:gson:2.8.5'  //json工具
+
+    //分页加载工具
+//    implementation "android.arch.paging:runtime:2.1.0"
+    implementation "androidx.paging:paging-runtime:3.0.0-alpha07"
+    implementation "androidx.paging:paging-rxjava2:3.0.0-alpha07"
+    implementation "androidx.paging:paging-guava:3.0.0-alpha07"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    implementation 'com.uber.autodispose:autodispose-android-archcomponents:1.0.0-RC2'
+
+    compile(name:'itemview-release', ext:'aar')
 
 
     //基于ijkplayer视频框架修改的库
@@ -67,5 +106,6 @@ dependencies {
     api 'com.github.tcking:ijkplayer-arm64:0.8.8' //support arm64
     api 'com.github.tcking:ijkplayer-armv5:0.8.8' //support armv5
     api 'com.github.tcking:ijkplayer-x86:0.8.8' //support x86
-    api 'com.github.tcking:ijkplayer-x86_64:0.8.8' //support x86_64
+    api 'com.github.tcking:ijkplayer-x86_64:0.8.8' //support x86_64\
+
 }
