--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-//        google()
-//        jcenter()
+
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        google()
+        jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
@@ -16,10 +17,15 @@ buildscript {
 
 allprojects {
     repositories {
-//        google()
-//        jcenter()
+
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://jitpack.io' }
+        google()
+        jcenter()
+        flatDir {
+            dirs '../aars'
+        }
     }
 }
 
