--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,5 +110,7 @@ dependencies {
 
     //高斯模糊库
     implementation 'jp.wasabeef:glide-transformations:2.0.1'
-
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 }
