--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,10 @@
             android:windowSoftInputMode="stateVisible|adjustResize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"/>
-        <activity android:name=".ui.activity.PersionalInfoActivity" />
+<!--        <activity android:name=".ui.activity.PersionalInfoActivity" />-->
         <activity android:name=".ui.activity.UploadHeadActivity" />
-        <activity android:name=".ui.activity.UploadVideoAcivity" />
+        <activity android:configChanges="orientation|keyboardHidden|screenSize"
+            android:name=".ui.activity.UploadVideoAcivity" />
         <activity android:name=".ui.activity.MessageActivity" />
         <activity android:name=".ui.activity.UserInfoCenterActivity" />
         <activity android:name=".ui.activity.SettingActivity" />
@@ -48,7 +49,7 @@
         <activity android:name=".ui.activity.FunsActivity" />
         <activity android:name=".ui.activity.PlayHistoryActivity" />
         <activity android:name=".ui.activity.EditInfoActivity" />
-
+        <activity android:name=".ui.activity.SearchActivity" />
         <service android:name=".UploadService" />
     </application>
 
